<resources>
    <string name="app_name">YaPhotos</string>
    <string-array name="album_names">
        <item>Recent</item>
        <item>Popular</item>
        <item>Of the day</item>
    </string-array>
    <string name="share_action">Share</string>
    <string name="share_chooser_title">Share photo via</string>
    <string name="try_again">Try again</string>
    <string name="download_failed">Download failed. Please try again later.\n</string>
    <string name="about">About</string>
    <string name="webpage">Web page</string>
    <string name="subtitle_template">%1$s \u00A9 %2$s</string>
    <string name="sharing_failed">Can\'t load file for sharing</string>
</resources>
